todo-api/todo-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-deployment
  namespace: development
  labels:
    app: todo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - todo-api
                topologyKey: kubernetes.io/hostname
      restartPolicy: Always
      containers:
        - name: todo-api
          image: aliakkas006255/todo-api:607a7986ed8c1b23d8a14998ff2942fd741442f4
          securityContext:
            allowPrivilegeEscalation: false
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: '300M'
              cpu: '100m'
            limits:
              memory: '500M'
              cpu: '200m'
