todo-api/todo-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-svc
  namespace: production
spec:
  selector:
    app: todo-api
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
