todo-api/todo-api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-api-route
  namespace: development
spec:
  parentRefs:
    - name: todo-gateway
      namespace: nginx-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/todos
      backendRefs:
        - name: todo-api-svc
          port: 8000

    - matches:
        - path:
            type: PathPrefix
            value: /health
      backendRefs:
        - name: todo-api-svc
          port: 8000
